<resources>
    <string name="app_name">Android Components</string>
    <string name="activity">Activity</string>
    <string name="broad_cast_receiver">Broad Cast Receiver</string>
    <string name="content_provider">Content Provider</string>
    <string name="services">Services</string>
    <string name="intent">Intent</string>
    <string name="check_the_logs_to_understand_the_activity_lifecycle">Check the logs to understand the activity lifecycle.</string>
    <string name="empty_string" />
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="MyIntentService">MyIntentService</string>
    <string name="start_intent_service">Start Intent Service</string>
    <string name="stop_intent_service">Stop Intent Service</string>
    <string name="stop_my_service">Stop Service</string>
    <string name="start_my_service">Start Service</string>
    <string name="intent_filter_image">Intent Filter Image</string>
    <string name="this_image_is_displayed_using_intent_filter">This image is displayed using intent filter</string>
</resources>